# chainflip-backend

./: .dockerignore  .drone.yaml  .drone.yml  .editorconfig  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .hadolint.yaml  .rustfmt.toml  .sops.yaml  .zepter.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.save  Default.enc.toml  Dockerfile  Dockerfile.chainflip-engine  Dockerfile.hardhat  Dockerfile.rust-base  Dockerfile.rust-poetry  Dockerfile.state-chain-node  FEATURE_FLAGS.md  Makefile  Makefile.toml  PRACTICES.md  README.md  RELEASE_TEMPLATE.md  SECURITY.md  api-documentation.md  backspin-bouncer.sh  build-chainspec.sh  c-out.txt  cf_spec.json  cliff.toml  clippy.sh  codecov.yml  configure.sh  (+30 more)
api/api-json-schema/: Cargo.toml  README.md
api/api-json-schema/src/: api-docgen.rs  lib.rs  schema_macro.rs
api/cf-node-client/: Cargo.toml  build.rs
api/cf-node-client/src/: error_decoder.rs  events_decoder.rs  lib.rs  runtime_decoder.rs  signer.rs  subxt_state_chain_config.rs
api/cf-node-clients/: Cargo.toml
api/cf-node-clients/artifacts/: chainflip_metadata.scale
api/cf-node-clients/src/: error_decoder.rs  events_decoder.rs  lib.rs  runtime_decoder.rs  subxt_state_chain_config.rs
api/cf-rpc-apis/: Cargo.toml  clippy.toml
api/cf-rpc-apis/src/: broker.rs  grandpa.rs  lib.rs  lp.rs
api/cf-rpc-types/: Cargo.toml
api/cf-rpc-types/src/: broker.rs  lib.rs  lp.rs  traceability.rs  with_std.rs
api/integrator/: Cargo.toml
api/integrator/src/: error_decoder.rs  lib.rs
api/lib/: Cargo.toml  clippy.toml
api/lib/src/: lib.rs  lp.rs  queries.rs
common/: Cargo.toml  README.md
common/src/: constants.rs  lib.rs
common/src/contracts/: Vault.json
common/src/types/: coin.rs  network.rs  timestamp.rs  utf8.rs
common/src/utils/: mod.rs
common/src/validation/: mod.rs
engine/: .drone.yml  .rustfmt.toml  Cargo.toml  GUIDELINES.md  Makefile.toml  README.md  build.rs  extrinsic_bytes.txt  extrinsic_bytes_wrapped_in_gov.txt  logrotate.conf  metadata.assethub.scale  metadata.polkadot.scale  start-engine.sh
engine-dylib/: Cargo.toml  build.rs
engine-dylib/src/: lib.rs
engine-proc-macros/: Cargo.toml  build.rs
engine-proc-macros/src/: lib.rs
engine-runner/: Cargo.toml  build.rs
engine-runner-bin/: Cargo.toml  README.md  build.rs
engine-runner-bin/package/berghain/: chainflip-engine.service
engine-runner-bin/package/perseverance/: chainflip-engine.service
engine-runner-bin/package/sisyphos/: chainflip-engine.service
engine-runner-bin/src/: main.rs
engine-runner-bin/tests/: command_args.rs
engine-runner/src/: main.rs
engine/abis/: StakeManager.json
engine/chain-rpc/solana-rpc/: Cargo.toml
engine/cli/: Cargo.toml
engine/cli/src/: main.rs  settings.rs
engine/config/: CI.toml  Default.toml  Development.toml  End2End.toml  IbizaDefault.toml  IbizaDevelopment.toml  SnowWhite.toml  Template.toml  Testing.toml  log4rs.example.yml
engine/config/btc-test/: local.example.toml
engine/config/docker/: Default.toml
engine/examples/: sequential_signing.rs
engine/generate-genesis-keys/: Cargo.toml  README.md
engine/generate-genesis-keys/src/: main.rs
engine/genesis-key/: Cargo.toml
engine/genesis-key/src/: main.rs
engine/insert-genesis-keyshare/: Cargo.toml
engine/insert-genesis-keyshare/src/: main.rs
engine/insert-genesis-keyshares/: Cargo.toml
engine/insert-genesis-keyshares/src/: main.rs
engine/multisig/: Cargo.toml  clippy.toml
engine/multisig/src/: client.rs  crypto.rs  lib.rs  p2p_interface.rs
engine/p2p/: Cargo.toml
engine/p2p/src/: core.rs  fair_channel.rs  lib.rs  message.rs  muxer.rs  peer.rs  quic.rs  supervisor.rs  zmq.rs
engine/package/: chainflip-engine.service  preinst
engine/package/berghain/: chainflip-engine.service  chainflip-engine1.1.service  chainflip-engine1.3.service  chainflip-engine1.4.service
engine/package/perseverance/: chainflip-engine-lsr.service  chainflip-engine-perv.service  chainflip-engine.service  chainflip-engine0.10.service  chainflip-engine1.0.service  chainflip-engine1.1.service  chainflip-engine1.2.service  chainflip-engine1.3.service  chainflip-engine1.4.service  postinst  preinst
engine/package/sisyphos/: chainflip-engine-lsr.service  chainflip-engine-prev.service  chainflip-engine.service  chainflip-engine0.10.service  postinst  preinst  (+3 more)
engine/sc-client/: Cargo.toml
engine/scripts/: dylib_version.sh
engine/src/: btc.rs  caching_client.rs  caching_request.rs  common.rs  constants.rs  db.rs  dot.rs  duty_manager.rs  elections.rs  engine_utils.rs  errors.rs  eth.rs  evm.rs  health.rs  heartbeat.rs  lib.rs  logging.rs  main.rs  metrics.rs  multisig.rs  multisig_p2p.rs  p2p.rs  p2p_muxer.rs  retrier.rs  rpc_retrier.rs  rpc_utils.rs  settings.rs  settings_migrate.rs  sol.rs  start.rs  state_chain_observer.rs  state_chain_reserved_peers.rs  stream_utils.rs  task_scope.rs  temp_event_mapper.rs  testing.rs  tron.rs  witness.rs
engine/tests/: .gitignore  README.md  can_subscribe_infura.rs  chain_tracking_integration.rs  common.rs  config.toml  key_manager_integration.rs  rotation_e2e.rs  rotation_end_to_end.rs  stake_manager_integration.rs  state_chain_gateway_integration.rs  vault_integration.rs  witness.rs
generate-migrations/: Cargo.toml
generate-migrations/src/: container.rs  diff.rs  from_metadata.rs  main.rs  metadata.rs  registry.rs  typediff.rs  types2.rs  types_old.rs  virtual_file.rs  write_migration.rs
multisig/: Cargo.toml
multisig/src/: crypto.rs  lib.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
relayer/: Cargo.toml  README.md
relayer/src/: main.rs  relayer.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
state-chain/amm/: Cargo.toml  pruned_snapshot.json
state-chain/amm-math/: Cargo.toml
state-chain/cf-integration-tests/: Cargo.toml
utilities/: Cargo.toml
utilities/proc-macros/: Cargo.toml
utilities/scale-json/: Cargo.toml
utilities/scale-json-event-logger/: Cargo.toml
utilities/src/: constants.rs  lib.rs  macros.rs  testing.rs  with_serde.rs  with_std.rs  without_std.rs
(+4896 files in other folders)
