[workspace]
resolver = "2"

members = [
  'foreign-chains/solana/sol-prim',
  'api/lib',
  'api/bin/chainflip-cli',
  'api/bin/chainflip-broker-api',
  'api/bin/chainflip-lp-api',
  'api/bin/chainflip-ingress-egress-tracker',
  'state-chain/chains',
  'state-chain/node',
  'state-chain/amm',
  'state-chain/pallets/cf-account-roles',
  'state-chain/pallets/cf-broadcast',
  'state-chain/pallets/cf-chain-tracking',
  'state-chain/pallets/cf-elections',
  'state-chain/pallets/cf-emissions',
  'state-chain/pallets/cf-environment',
  'state-chain/pallets/cf-flip',
  'state-chain/pallets/cf-funding',
  'state-chain/pallets/cf-governance',
  'state-chain/pallets/cf-ingress-egress',
  'state-chain/pallets/cf-lp',
  'state-chain/pallets/cf-asset-balances',
  'state-chain/pallets/cf-pools',
  'state-chain/pallets/cf-reputation',
  'state-chain/pallets/cf-threshold-signature',
  'state-chain/pallets/cf-validator',
  'state-chain/pallets/cf-vaults',
  'state-chain/pallets/cf-swapping',
  'state-chain/pallets/cf-witnesser',
  'state-chain/pallets/cf-tokenholder-governance',
  'state-chain/pallets/cf-cfe-interface',
  'state-chain/cf-integration-tests',
  'state-chain/runtime-upgrade-utilities',
  'state-chain/runtime-utilities',
  'state-chain/test-utilities',
  'state-chain/runtime-utilities/macros',
  'state-chain/runtime',
  'state-chain/traits',
  'state-chain/primitives',
  'state-chain/cfe-events',
  'engine',
  'engine/generate-genesis-keys',
  'engine-runner-bin',
  'engine-upgrade-utils',
  'engine-proc-macros',
  'utilities',
  'utilities/scale-json',
  'utilities/scale-json-event-logger',
  'state-chain/custom-rpc',
  'state-chain/cf-session-benchmarking',
  'engine/multisig',
]

[workspace.lints.clippy]
blocks_in_conditions = "allow"
missing_const_for_thread_local = "allow"

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-zebra = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
k256 = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
secp256k1 = { opt-level = 3 }
sha2 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.dev]
rpath = true

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
rpath = true

[profile.production]
inherits = "release"

# Sacrifice compile speed for execution speed by using optimization flags:

# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = "fat"
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

[workspace.dependencies]
anyhow = { version = "1.0" }
arrayref = { version = "0.3.6" }
async-trait = { version = "0.1.79" }
async-channel = { version = "1.8.0" }
async-broadcast = { version = "0.5.1" }
base64 = { version = "0.22.1" }
bincode = { version = "1.3.3" }
bitcoin = { version = "0.30.0" }
blake2 = { version = "0.10" }
bs58 = { version = "0.5.1", default-features = false }
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
clap = { version = "4.5.3" }
chrono = { version = "0.4.31", default-features = false }
config = { version = "0.13.1" }
csv = { version = "1.1.6" }
curve25519-dalek = { version = "4.1.3", default-features = false }
dyn-clone = { version = "1.0.4" }
ed25519-dalek = { version = "2.1.1" }
env_logger = { version = "0.11.3" }
ethbloom = { version = "0.13" }
ethereum = { version = "0.14", default-features = false }
ethers = { version = "2.0.8" }
frame-metadata = { version = "16.0.0", default-features = false }
fs_extra = { version = "1.2.0" }
futures = { version = "0.3.30" }
futures-core = { version = "0.3.14" }
futures-util = { version = "0.3.14" }
generic-array = { version = "1.1.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
http = { version = "1.1.0" }
httparse = { version = "1.4.1" }
insta = { version = "1.38.0" }
itertools = { version = "0.13", default-features = false }
jsonrpsee = { version = "0.23.2" }
lazy_format = { version ="2.0" }
lazy_static = { version = "1.4" }
libp2p-identity = { version = "0.2" }
libsecp256k1 = { version = "0.7", default-features = false }
log = { version = "0.4.16", default-features = false }
mockall = { version = "0.13.0" }
nanorand = { version = "0.7.0", default-features = false }
num-bigint = { version = "0.4" }
num-derive = { version = "0.4.2" }
num-traits = { version = "0.2" }
pin-project = { version = "1.0.12" }
public-ip = { version = "0.2.2" }
rayon = { version = "1.7.0" }
rand = { version = "0.8.5", default-features = false }
redis = { version = "0.27.2" }
regex = { version = "1" }
reqwest = { version = "0.11.4" }
rlp = { version = "0.5", default-features = false }
rocksdb = { version = "0.21.0", default-features = false }
serde_bytes = { version = "0.11.14", default-features = false }
scale-decode = { version = "0.13" }
scale-info = { version = "2.11.1", default-features = false }
scale-type-resolver = { version = "0.2" }
schnorrkel = { version = "0.11.4" }
serde = { version = "1.0.197", default-features = false }
serde_json = { version = "1.0.128" }
secp256k1 = { version = "0.27" }
sha2 = { version = "0.10.7", default-features = false }
strum = { version = "0.26.3", default-features = false }
strum_macros = { version = "0.26.4", default-features = false }
subxt = { version = "0.33" }
thiserror = { version = "1.0.50", default-features = false }
tempfile = { version = "3.8" }
tokio = { version = "1.37.0", default-features = false }
tokio-stream = { version = "0.1.5" }
tracing = { version = "0.1.34" }
tracing-subscriber = { version = "0.3.3" }
typenum = { version = "1.15" }
url = { version = "2.4" }
warp = { version = "0.3.6" }
web3 = { version = "0.19", default-features = false}
x25519-dalek = { version = "2.0" }
zeroize = { version = "1.5.4" }